--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,6 @@ services:
       - "5432:${POSTGRES_PORT}"
     volumes:
       - backend-data:/var/lib/postgresql/data
-
   backend:
     container_name: backend
     build:
@@ -27,13 +26,33 @@ services:
     env_file:
       - ".env"
     restart: always
-#    ports:
-#      - "${API_PORT}:${API_PORT}"
     depends_on:
       - postgres
       - chroma
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    volumes:
+      - ./fixtures:/app/fixtures:ro
+    # ports:
+    #   - "${API_PORT}:${API_PORT}"
+
+
+    
+ # backend:
+  #  container_name: backend
+   # build:
+    #  context: .
+     # dockerfile: Dockerfile
+   # env_file:
+    #  - ".env"
+   # restart: always
+#    ports:
+#      - "${API_PORT}:${API_PORT}"
+    #depends_on:
+    #  - postgres
+    #  - chroma
+   # extra_hosts:
+   #   - "host.docker.internal:host-gateway"
 
   chroma:
     image: chromadb/chroma:latest
